<resources>
    <string name="app_name">myPokedex</string>
    <string name="username">Username</string>
    <string name="pokedex_app">Pokedex App!</string>
    <string name="password">Password</string>
    <string name="enter_your_credentials_to_sign_in">Enter your credentials to sign in!</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_up">Or Sign Up!</string>
    <string name="create_an_awesome_username">Create an Awesome Username!</string>
    <string name="now_create_a_password">Now, create a password!</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_account">My Account</string>
    <string name="account_information">Account Information</string>
    <string name="username_account">Username : </string>
    <string name="password_account">Password : </string>
    <string name="update">Update</string>
    <string name="who_s_that_pokemon_points">Who\'s that Pokemon? Points:</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out!</string>
    <string name="who_s_that_pokemon">Who\'s That Pokemon?</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="return_text">Return</string>
    <string name="refresh">Refresh!</string>
    <string name="play_app_game">Play App Game</string>
</resources>