<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/top_view"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_information"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/account_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_account"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="César"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/username_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_account"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="PéDeMesa"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/points_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/points_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_s_that_pokemon_points"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/points_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <Button
            style="@style/RectangularButton"
            android:id="@+id/update_user_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:textColor="@color/white"
            android:text="@string/update"
            android:layout_marginEnd="10dp"/>

        <Button
            style="@style/RectangularButton"
            android:id="@+id/return_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:textColor="@color/white"
            android:text="@string/home"/>
    </LinearLayout>

    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>