<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/blockingFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/top_view"
                android:background="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokedex_app"
                android:textSize="36sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/top_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_credentials_to_sign_in"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/main_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_text"
                android:autofillHints="username"
                android:inputType="text"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_username"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                />

            <Button
                style="@style/RectangularButton"
                android:id="@+id/sign_in_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:textColor="@color/white"
                android:text="@string/sign_in"
                app:layout_constraintTop_toBottomOf="@id/sign_in_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_up"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_button"
                android:layout_marginTop="40dp"
                />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/create_an_awesome_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_text"
                android:autofillHints="username"
                android:inputType="text"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/now_create_a_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_username"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                />

            <Button
                style="@style/RectangularButton"
                android:id="@+id/sign_up_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <View
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


  </androidx.constraintlayout.widget.ConstraintLayout>